--- a/app/assets/sass/govuk-site.scss
+++ b/app/assets/sass/govuk-site.scss
@@ -4022,7 +4022,7 @@
   text-decoration: none
 }
 
-.govuk-details__summary::-webkit-details-marker {
+.govuk-details__summary::marker {
   display: none
 }
 
