--- a/app/assets/sass/nhsuk-site.scss
+++ b/app/assets/sass/nhsuk-site.scss
@@ -3466,7 +3466,7 @@ b,strong {
   text-decoration: underline
 }
 
-.nhsuk-details__summary::-webkit-details-marker {
+.nhsuk-details__summary::marker {
   display: none
 }
 
