--- a/app/views/lfd-collection-registration/v1/date-of-birth.html
+++ b/app/views/lfd-collection-registration/v1/date-of-birth.html
@@ -28,7 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/lfd-collection-registration/{{version}}/address" method="post">
+      <form action="/lfd-collection-registration/{{version}}/email-address" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
