--- a/app/views/lfd-collection-registration/v1/manual-address-another.html
+++ b/app/views/lfd-collection-registration/v1/manual-address-another.html
@@ -1,5 +1,5 @@
 {% set version = "v1" %}
-{% set pageTitle = "Which address are you currently living at?" %}
+{% set pageTitle = "Which address does the person you’re collecting for currently live at?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -19,7 +19,7 @@
   {% include "includes/account-menu.html" %}
 {% endif %}
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/find-address">Back</a>
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/find-address-another">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -28,7 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/lfd-collection-registration/{{version}}/action10/manual-address" method="post">
+      <form action="/lfd-collection-registration/{{version}}/check-your-answers" method="post">
 
         <fieldset class="govuk-fieldset" aria-describedby="post-code-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -42,7 +42,7 @@
             <p class="govuk-!-margin-top-5">
               <strong>Postcode</strong><br><br>
               <strong>{{ data['home-postcode'] | default('LS1 3BE') }}</strong>
-              <a href="/lfd-collection-registration/{{version}}/address" class="govuk-!-margin-left-5">
+              <a href="/lfd-collection-registration/{{version}}/address-another" class="govuk-!-margin-left-5">
                 Change
                 <span class="govuk-visually-hidden">your postcode</span>
               </a>
