--- a/app/views/lfd-collection-registration/v1/mobile-number.html
+++ b/app/views/lfd-collection-registration/v1/mobile-number.html
@@ -28,7 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/lfd-collection-registration/{{version}}/check-your-answers" method="post">
+      <form action="/lfd-collection-registration/{{version}}/collecting-for" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="mobile-number-hint">
@@ -38,13 +38,13 @@
               </h1>
             </legend>
             <span id="mobile-number-hint" class="govuk-body">
-              We need this in case we need to contact you about your order.
+              If you do not provide an email address, we’ll send your collect code to this mobile number. We may also use it to contact you about your collection.
             </span>
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="mobile-number-1" name="mobile-number" type="radio" value="Yes" data-aria-controls="conditional-mobile-number" {{ checked("mobile-number", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="mobile-number-1">
-                  Yes, I have a mobile phone number
+                  Yes, I have a mobile number
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-mobile-number">
@@ -58,7 +58,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="mobile-number-2" name="mobile-number" type="radio" value="No" {{ checked("mobile-number", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="mobile-number-2">
-                  No, I do not have a mobile phone number
+                  No, I do not have a mobile number
                 </label>
               </div>
             </div>
