--- a/app/views/logresults-web-service/v2/organisation/index.html
+++ b/app/views/logresults-web-service/v2/organisation/index.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "You're invited to manage the log test site COVID-19 results service" %}
+{% set pageTitle = "You're invited to be an organisation manager for this service" %}
 {% extends "includes/layout.html" %}
 
 {% block content %}
@@ -9,22 +9,26 @@
 
      <h1 class="govuk-heading-l govuk-!-margin-bottom-6">{{ pageTitle }}</h1>
 
-     <p class="govuk-body govuk-!-margin-bottom-6">This service lets you manage your organisation's test sites and team leaders. You can:</p>
+     <p class="govuk-body govuk-!-margin-bottom-6">As an organisation manager, this service lets you manage site access for new and existing staff. You can:</p>
 
       <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-5">
-        <li>add test sites where your organisation can log test results</li>
-        <li>add and manage team leaders, so that they can approve or deny test site access for staff</li>
-        <li>work as a team leader to manage test site access for staff</li>
+        <li>add sites where your organisation can log test results and collections</li>
+        <li>add and manage team leaders, so they can approve or deny site access for staff</li>
+        <li>work as a team leader to manage site access for staff</li>
       </ul>
 
       <h2 class="govuk-heading-m">How to create an account</h2>
-      <p class="govuk-body">You'll receive a text with your temporary password. Use this to sign in with your email address as the username. Then reset your password to continue.</p>
+      <p class="govuk-body">You'll receive a text with your temporary password. You must use this wiithin 28 days before it expires. Sign in with your email address as your username. Then reset your password to continue.</p>
 
-      <p class="govuk-body govuk-!-margin-bottom-6"><strong>If you are a team leader, use the same login details you already have.</strong></p>
+      <p class="govuk-body govuk-!-margin-bottom-6 govuk-!-font-size-24"><strong>If you're a team leader, use the same login details you already have.</strong></p>
 
-     <a href="/logresults-web-service/{{version}}/organisation/choose-role" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
+      <p>
+        Start now at: <a href="/logresults-web-service/{{version}}/organisation/choose-role" class="govuk-link">https://org-admin.log-coronavirus-test-site-results.service.gov.uk</a>
+      </p>
+
+     <!-- <a href="/logresults-web-service/{{version}}/organisation/choose-role" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
         Start now
-     </a>
+     </a> -->
 
     </div>
   </div>
