--- a/app/views/logresults-web-service/v2/organisation/manage-organisation.html
+++ b/app/views/logresults-web-service/v2/organisation/manage-organisation.html
@@ -31,10 +31,10 @@
               <button class="govuk-!-margin-bottom-4 account-home-button">
                 <div>
                   <p class="govuk-!-margin-bottom-2">
-                    <strong style="color: #005eb8">Sites</strong>
+                    <strong style="color: #005eb8">Add or manage sites</strong>
                   </p>
                   <p class="govuk-!-margin-bottom-0">
-                    Add or manage sites for your organisation
+                    Add or manage sites where your organisation can log test results and collections.
                   </p>
                 </div>
               </button>
@@ -46,10 +46,10 @@
               <button class="govuk-!-margin-bottom-4 account-home-button">
                 <div>
                   <p class="govuk-!-margin-bottom-2">
-                    <strong style="color: #005eb8">Team leaders</strong>
+                    <strong style="color: #005eb8">Add or manage team leaders</strong>
                   </p>
                   <p class="govuk-!-margin-bottom-0">
-                    Add or manage team leaders for your organisation
+                    Add or manage team leaders, so that they can approve or deny site staff access.
                   </p>
                 </div>
               </button>
