--- a/app/views/logresults-web-service/v2/organisation/manage-site-2.html
+++ b/app/views/logresults-web-service/v2/organisation/manage-site-2.html
@@ -98,7 +98,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="site-2-status" name="site-2-status" type="checkbox" value="Active" onclick="checkBox()" checked>
               <label class="govuk-label govuk-checkboxes__label" for="site-2-status">
-                Active - Your organisation can log test results at this site
+                Active - Your organisation can log test results and collections at this site
               </label>
             </div>
           </div>
@@ -111,7 +111,7 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="site-2-status" name="site-2-status" type="checkbox" value="Active" onclick="checkBox()" checked>
               <label class="govuk-label govuk-checkboxes__label" for="site-2-status">
-                Active - Your organisation can log test results at this site
+                Active - Your organisation can log test results and collections at this site
               </label>
             </div>
           </div>
@@ -124,13 +124,23 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="site-2-status" name="site-2-status" type="checkbox" value="Active" onclick="checkBox()">
               <label class="govuk-label govuk-checkboxes__label" for="site-2-status">
-                Inactive - Your organisation cannot log test results at this site
+                Inactive - Your organisation cannot log test results and collections at this site
               </label>
             </div>
           </div>
         </fieldset>
       </div>
       {% endif %}
+
+      <div class="govuk-inset-text">
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            If you deactivate this site, staff cannot log test results and collections
+          </strong>
+        </div>
+      </div>
 
       <button class="govuk-button" type="submit" data-module="govuk-button">
         Save and continue
