--- a/app/views/logresults-web-service/v2/site-operative/confirmation-collection.html
+++ b/app/views/logresults-web-service/v2/site-operative/confirmation-collection.html
@@ -42,10 +42,14 @@
               </div>
             </div>
             <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value="" style="display: none;">
+            <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value="" style="display: none;">
             <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-1" name="lot-reference-1" type="text" value="" style="display: none;">
+            <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-1-confirm" name="lot-reference-1-confirm" type="text" value="" style="display: none;">
             <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-2" name="lot-reference-2" type="text" value="" style="display: none;">
+            <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-2-confirm" name="lot-reference-2-confirm" type="text" value="" style="display: none;">
             <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-3" name="lot-reference-3" type="text" value="" style="display: none;">
-            <button class="govuk-button" data-module="govuk-button">Log/scan/link another test pack collection</button>
+            <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-3-confirm" name="lot-reference-3-confirm" type="text" value="" style="display: none;">
+            <button class="govuk-button" data-module="govuk-button">Log another test pack collection</button>
         </form>
         <form action="/logresults-web-service/{{version}}/site-operative/request-approved" method="post">
             <div class="govuk-radios govuk-!-margin-top-5" style="display: none;">
