--- a/app/views/logresults-web-service/v2/site-operative/edit-answers/enter-qr-code-person.html
+++ b/app/views/logresults-web-service/v2/site-operative/edit-answers/enter-qr-code-person.html
@@ -26,27 +26,38 @@
       <form action="/logresults-web-service/{{version}}/site-operative/check-your-answers-collection" method="post">
   
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="confirm-collect-code-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
                 {{ pageTitle }}
               </h1>
             </legend>
+            <span id="confirm-collect-code-hint" class="govuk-body">
+              The collect code is an x digit code which the person will either have in an email or text message.
+            </span>
 
-            <a href="/logresults-web-service/{{version}}/site-operative/edit-answers/qr-code-person" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-              Scan QR code
-            </a>
-  
+            <p class="govuk-body govuk-!-margin-top-4 govuk-!-margin-bottom-6">
+              <a href="/logresults-web-service/{{version}}/site-operative/qr-code-person" draggable="false" class="govuk-link govuk-!-margin-top-2">
+                Scan the collect code
+              </a>
+            </p>
+            
+<!-- 
+            <div class="govuk-!-width-two-thirds govuk-!-margin-top-6 govuk-!-margin-bottom-4" style="display: flex; justify-content:flex-start; flex-direction: column; align-items: center;">
+              <img src="/public/images/qr-collect.png" alt="barcode number" width="40%" />
+              <p class="govuk-body govuk-!-margin-top-3">Collect code reference: 12653234356</p>
+            </div> -->
+            
             <div class="govuk-form-group">
               <label class="govuk-label" for="qr-code-person-1">
-                QR code
+                Enter collect code
               </label>
-              <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value={{ data['qr-code-person-1'] }}>
+              <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" autofocus value={{ data['qr-code-person-1'] }}>
             </div>
 
-            <div class="govuk-form-group">
+            <div class="govuk-form-group govuk-!-margin-bottom-6">
               <label class="govuk-label" for="qr-code-person-1-confirm">
-                Confirm QR code
+                Confirm collect code
               </label>
               <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value={{ data['qr-code-person-1-confirm'] }}>
             </div>
@@ -60,5 +71,55 @@
   
     </div>
   </div>
+
+  <script type="text/javascript">
+    submitEvent()
+  
+    function selectInput(target) {
+      setTimeout(function () {
+        document.getElementById('home-address').focus()
+      }, 100)
+    }
+  
+    // function buttonClicked2(target) {
+    //   setTimeout(function () {
+    //     document.getElementById('home-address').value = '5 addresses found'
+    //     document.getElementById('content-2').style.display = 'none'
+    //     document.getElementById('content-3').style.display = 'block'
+    //     document.getElementById('home-postcode').focus()
+    //   }, 100)
+    // }
+  
+    function submitEvent() {
+      var input = document.getElementById('qr-code-person-1')
+      var inputConfirmation = document.getElementById('qr-code-person-1-confirm')
+      input.addEventListener('onChange', function (event) {
+        event.preventDefault()
+        if (input.value.length === 4) {
+          event.preventDefault()
+          selectInput(input)
+        } else {
+          event.preventDefault()
+          inputChanged(input)
+        }
+      })
+      // selectedLink.addEventListener('click', function (event) {
+      //   event.preventDefault()
+      //   if (selectedLink.getAttribute('disabled') === 'disabled') {
+      //   } else {
+      //     event.preventDefault()
+      //     buttonClicked2(selectedLink)
+      //   }
+      // })
+      
+    }
+  
+  </script>  
+
+<div class="proto-action big" style="bottom: 130px;">
+  <a href="/logresults-web-service/{{version}}/site-operative/edit-answers/enter-qr-code-person-option-2">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+  </a>
+</div>
 
 {% endblock %}
