--- a/app/views/logresults-web-service/v2/site-operative/site-id.html
+++ b/app/views/logresults-web-service/v2/site-operative/site-id.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "What's the test site's ID?" %}
+{% set pageTitle = "What's the site ID?" %}
 
 {% extends "includes/layout.html" %}
 
@@ -29,10 +29,10 @@
           </label>
         </h1>
         <span id="siteID-hint" class="govuk-body">
-          Enter the 4 character test site ID. If you cannot find it, ask your team leader.<br><br>
+          Enter the 4 character site ID. If you cannot find it, ask your team leader.<br><br>
         </span>
         <label class="govuk-label" for="mail-barcode-reference-1">
-          Test site ID<br>
+          Site ID<br>
           <span class="govuk-hint">For example, 'LEA4'</span>
         </label>
 
