--- a/app/views/lfd-collection-registration/v1/confirmation-email.html
+++ b/app/views/lfd-collection-registration/v1/confirmation-email.html
@@ -9,51 +9,58 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-4">
-        You can now pick up your rapid lateral flow test packs
+      <h1 class="govuk-heading-m govuk-!-margin-bottom-6">
+        Use your collect code to pick up your test packs
       </h1>
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">{{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Smith' }}</h3>
+      <!-- <h3 class="govuk-heading-s govuk-!-margin-bottom-1">{{ data['first-name'] or 'John' }} {{ data['last-name'] or 'Smith' }}</h3>
       <p class="govuk-body">
         {{ data['email-address'] or 'name@email.com' }}<br>
         {{ data['mobile-phone-number'] or '07472398473' }}
       </p>
 
       <p class="govuk-body">
-        Your collection for twice weekly testing is confirmed.<br><br>
-        Your code to collect your rapid tests is below - <strong>have this ready to show staff when you arrive</strong>.
+        Use your collect code to pick up test packs from a collection point.
       </p>
 
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
 
       <div style="display: flex; justify-content: center;">
-        <img src="/public/images/QR_code.png" alt="randox number" style="height: 20%; width: 20%;" />
+        <img src="/public/images/qr-collect.png" alt="randox number" style="height: 30%; width: 30%;" />
       </div>
 
-      <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center;">Collect Code ID: NYX7-CT5Z-8VF7-7FW4-CYQK</p>
+      <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center; line-height: 1em;">
+        Collect code reference:<br><br>
+        <strong class="govuk-!-font-size-24">
+          <span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span>
+        </strong>
+      </p>
 
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <!-- <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"> -->
 
       <h3 class="govuk-heading-s govuk-!-margin-top-6">What happens next</h3>
       <p class="govuk-body">
-        Show your collect code at a collection point near you to pick up your test packs.<br><br>
-        You can collect up to 2 packs of 7 tests at a time (14 tests in total).<br><br>
-        <a class="govuk-body" href="https://find-covid-19-rapid-test-sites.maps.test-and-trace.nhs.uk/">Find your nearest collection point</a>
+        Show your collect code at a collection point to pick up your test packs.<br><br>
+        <a class="govuk-body" href="https://find-covid-19-rapid-test-sites.maps.test-and-trace.nhs.uk/">Find your nearest collection point</a><br><br>
+        You can only use your collect code once to collect up to 2 packs of 7 test kits (14 test kits in total).
       </p>
+
       <h3 class="govuk-heading-s govuk-!-margin-top-6">
-        Each test pack contains:
+        What's in the test pack
       </h3>
       <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-4">
         <li>7 rapid lateral flow tests</li>
-        <li>instructions on how to take the test and how to report results</li>
+        <li>instructions on how to take the test and report results</li>
       </ul>
 
       <h3 class="govuk-heading-s govuk-!-margin-top-6">Taking the test</h3>
-      <p class="govuk-body">You’ll get an email in the next 36 hours with help on how to take the test and link to a short video. It will also include more information about reporting results on the day you take the test and what to do next.</p>
+      <p class="govuk-body">
+        You’ll get an email in the next 36 hours with help on how to take the test and a link to a short video. It will also include more information about reporting results on the day you take the test and what to do next.
+      </p>
 
       <p class="govuk-body">
-        <a class="govuk-link" href="#">Watch a short video: how to take rapid test</a><br><br>
-        <a class="govuk-link" href="#">Get test instructions in other languages or easy read and large print format</a><br><br>
-        <a class="govuk-link" href="#">Reporting your results to the NHS</a>
+        <a class="govuk-link" href="#">Watch a short video: how to take a rapid test</a><br><br>
+        <a class="govuk-link" href="#">Get test instructions in other languages and in easy read or large print format</a><br><br>
+        <a class="govuk-link" href="#">How to report your results</a>
       </p>
 
     <h3 class="govuk-heading-s govuk-!-margin-top-4">Get more help</h3>
@@ -75,8 +82,8 @@
 
 {% block bodyEnd %}
 <div class="proto-action big">
-    <a href="../../share-result-lateral-flow/v17/">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Report results</div>
+    <a href="/lfd-collection-registration/{{version}}/sms">
+      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">sms</div>
     </a>
   </div>
 {% endblock %}
