--- a/app/views/lfd-collection-registration/v1/email-address.html
+++ b/app/views/lfd-collection-registration/v1/email-address.html
@@ -19,7 +19,7 @@
   {% include "includes/account-menu.html" %}
 {% endif %}
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/find-address">Back</a>
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/date-of-birth">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -28,7 +28,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/lfd-collection-registration/{{version}}/action10/email-address" method="post">
+      <form class="form" action="/lfd-collection-registration/{{version}}/mobile-number" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="email-address-hint">
