--- a/app/views/lfd-collection-registration/v1/nhs-account.html
+++ b/app/views/lfd-collection-registration/v1/nhs-account.html
@@ -15,7 +15,7 @@
     </p>
   </div>
 
-  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/">Back</a>
+  <a class="govuk-back-link" href="/lfd-collection-registration/{{version}}/pharmacy-collection">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -42,7 +42,7 @@
           <strong>Continue without an account</strong>
         </label>
         <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-          Your details will not be saved for future tests and you'll need to enter all information again.
+          We cannot save your details for future tests, so you'll need to enter all  information again.
         </div>
       </div>
     </div>
