--- a/app/views/logresults-web-service/v2/site-operative/choose-role.html
+++ b/app/views/logresults-web-service/v2/site-operative/choose-role.html
@@ -26,21 +26,6 @@
           <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">{{ pageTitle }}</h1>
 
           <div style="padding: 0">
-            <form action="/logresults-web-service/{{version}}/organisation/login-temporary" method="post">
-              <button class="govuk-!-margin-bottom-4 account-home-button">
-                <div>
-                  <p class="govuk-!-margin-bottom-2">
-                    <strong style="color: #005eb8">I'm a testing manager</strong>
-                  </p>
-                  <p class="govuk-!-margin-bottom-0">
-                    I add or manage sites and team leaders for my organisation.
-                  </p>
-                </div>
-              </button>
-            </form>
-          </div>
-
-          <div style="padding: 0">
             <form action="/logresults-web-service/{{version}}/site-coordinator/login-temporary" method="post">
               <button class="govuk-!-margin-bottom-4 account-home-button">
                 <div>
@@ -48,7 +33,7 @@
                     <strong style="color: #005eb8">I'm a team leader</strong>
                   </p>
                   <p class="govuk-!-margin-bottom-0">
-                    I approve or deny test site access for staff.
+                    I approve or deny site access for staff.
                   </p>
                 </div>
               </button>
@@ -63,7 +48,22 @@
                     <strong style="color: #005eb8">I'm a testing operative</strong>
                   </p>
                   <p class="govuk-!-margin-bottom-0">
-                    I log coronavirus (COVID-19) test results at a test site.
+                    I log COVID-19 rapid lateral flow test results and/or test pack collections.
+                  </p>
+                </div>
+              </button>
+            </form>
+          </div>
+
+          <div style="padding: 0">
+            <form action="/logresults-web-service/{{version}}/organisation/login-temporary" method="post">
+              <button class="govuk-!-margin-bottom-4 account-home-button">
+                <div>
+                  <p class="govuk-!-margin-bottom-2">
+                    <strong style="color: #005eb8">I'm an organisation manager</strong>
+                  </p>
+                  <p class="govuk-!-margin-bottom-0">
+                    I manage sites and team leaders so that my organisation can log COVID-19 rapid lateral flow test results and collections.
                   </p>
                 </div>
               </button>
