--- a/app/views/logresults-web-service/v2/site-operative/enter-lot-reference-3.html
+++ b/app/views/logresults-web-service/v2/site-operative/enter-lot-reference-3.html
@@ -33,20 +33,20 @@
             </h1>
           </legend>
 
-          <a href="/logresults-web-service/{{version}}/site-operative/lot-reference-3" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--secondary" data-module="govuk-button">
+          <!-- <a href="/logresults-web-service/{{version}}/site-operative/lot-reference-3" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8 govuk-button--secondary" data-module="govuk-button">
             Scan LOT reference
-          </a>
+          </a> -->
 
           <br>
 
           <span id="lot-reference-hint" class="govuk-body">
-            You'll find the LOT reference on the back of the test pack.
+            You'll find the 8 character LOT reference on the back of the test pack. If you find a test pack with a different LOT reference, you must add this pack later.
           </span>
 
           <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
             <summary class="govuk-details__summary">
               <span class="govuk-details__summary-text">
-                What does the LOT number look like?
+                What does the LOT reference look like?
               </span>
             </summary>
             <div class="govuk-details__text">
@@ -56,7 +56,7 @@
 
           <div class="govuk-form-group govuk-!-margin-top-4">
             <label class="govuk-label" for="lot-reference-3">
-              Enter LOT reference
+              LOT reference
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="lot-reference-3" name="lot-reference-3" type="text" value={{ data['lot-reference-3'] }}>
           </div>
