--- a/app/views/logresults-web-service/v2/site-operative/enter-qr-code-person.html
+++ b/app/views/logresults-web-service/v2/site-operative/enter-qr-code-person.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter the person's QR code manually" %}
+{% set pageTitle = "Enter the person's collect code manually" %}
 
 {% extends "includes/layout.html" %}
 
@@ -23,42 +23,99 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
   
-      <form action="/logresults-web-service/{{version}}/site-operative/lot-reference" method="post">
+      <form action="/logresults-web-service/{{version}}/site-operative/action13/confirm-collect-code" method="post">
   
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="confirm-collect-code-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
                 {{ pageTitle }}
               </h1>
             </legend>
+            <span id="confirm-collect-code-hint" class="govuk-body">
+              The collect code is an x digit code which the person will either have in an email or text message.
+            </span>
 
-            <a href="/logresults-web-service/{{version}}/site-operative/qr-code-person" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-              Scan QR code
-            </a>
-  
+            <p class="govuk-body govuk-!-margin-top-4 govuk-!-margin-bottom-6">
+              <a href="/logresults-web-service/{{version}}/site-operative/qr-code-person" draggable="false" class="govuk-link govuk-!-margin-top-2">
+                Scan the collect code
+              </a>
+            </p>
+            
+<!-- 
+            <div class="govuk-!-width-two-thirds govuk-!-margin-top-6 govuk-!-margin-bottom-4" style="display: flex; justify-content:flex-start; flex-direction: column; align-items: center;">
+              <img src="/public/images/qr-collect.png" alt="barcode number" width="40%" />
+              <p class="govuk-body govuk-!-margin-top-3">Collect code reference: 12653234356</p>
+            </div> -->
+            
             <div class="govuk-form-group">
               <label class="govuk-label" for="qr-code-person-1">
-                Enter QR code
+                Enter collect code
               </label>
-              <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" value={{ data['qr-code-person-1'] }}>
+              <input maxlength="25" class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1" name="qr-code-person-1" type="text" autofocus value={{ data['qr-code-person-1'] }}>
             </div>
 
-            <div class="govuk-form-group">
+            <div class="govuk-form-group govuk-!-margin-bottom-6">
               <label class="govuk-label" for="qr-code-person-1-confirm">
-                Confirm QR code
+                Confirm collect code
               </label>
-              <input class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value={{ data['qr-code-person-1-confirm'] }}>
+              <input maxlength="25" class="govuk-input govuk-!-width-two-thirds" id="qr-code-person-1-confirm" name="qr-code-person-1-confirm" type="text" value={{ data['qr-code-person-1-confirm'] }}>
             </div>
             
           </fieldset>
         </div>
   
-        <button class="govuk-button" data-module="govuk-button">Continue</button>
+        <button class="govuk-button" data-module="govuk-button" id="continue-button">Continue</button>
   
       </form>
   
     </div>
   </div>
+
+  <script type="text/javascript">
+  lookForInputChange1()
+
+  function lookForInputChange1() {
+    var interval1 = setInterval(function() {
+      let inputValue = document.getElementById("qr-code-person-1").value;
+      if (inputValue.length === 4) {
+        document.getElementById("qr-code-person-1").value = inputValue + "   "
+      } else if (inputValue.length === 11) {
+        document.getElementById("qr-code-person-1").value = inputValue + "   "
+      } else if (inputValue.length === 18) {
+        document.getElementById("qr-code-person-1").value = inputValue + "   "
+      } else if (inputValue.length === 25) {
+        var nextInput = document.getElementById("qr-code-person-1-confirm");
+        nextInput.focus()
+        clearInterval(interval1)
+        lookForInputChange2()
+      }
+    }, 200); 
+  }
+
+  function lookForInputChange2() {
+    var interval2 = setInterval(function() {
+      let inputValue = document.getElementById("qr-code-person-1-confirm").value;
+      if (inputValue.length === 4) {
+        document.getElementById("qr-code-person-1-confirm").value = inputValue + "   "
+      } else if (inputValue.length === 11) {
+        document.getElementById("qr-code-person-1-confirm").value = inputValue + "   "
+      } else if (inputValue.length === 18) {
+        document.getElementById("qr-code-person-1-confirm").value = inputValue + "   "
+      } else if (inputValue.length === 25) {
+        var nextElem = document.getElementById("continue-button");
+        nextElem.focus()
+        clearInterval(interval2)
+      }
+    }, 200); 
+  }
+  
+  </script>  
+
+<div class="proto-action big" style="bottom: 130px;">
+  <a href="/logresults-web-service/{{version}}/site-operative/enter-qr-code-person-option-2">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+  </a>
+</div>
 
 {% endblock %}
