--- a/app/views/logresults-web-service/v2/site-operative/lot-references-summary.html
+++ b/app/views/logresults-web-service/v2/site-operative/lot-references-summary.html
@@ -143,7 +143,7 @@
         <input type="hidden" name="answers-checked" value="true">
 
         <button type="submit" class="govuk-button govuk-!-margin-bottom-4" data-module="govuk-button">
-          Save and continue
+          Continue
         </button>
 
       </form>
@@ -157,9 +157,9 @@
                 </button>
             </form> -->
             {% else %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference-3" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference-3" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                  Add a different LOT reference
                 </button>
             </form>
             {% endif %}
@@ -171,9 +171,9 @@
                 </button>
             </form> -->
             {% else %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference-2" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference-2" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                  Add a different LOT reference
                 </button>
             </form>
             {% endif %}
@@ -187,23 +187,23 @@
                 </button>
             </form> -->
             {% else %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference-3" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference-3" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                  Add a different LOT reference
                 </button>
             </form>
             {% endif %}
         {% else %}
             {% if data['number-of-packs-3'] %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                  Add a different LOT reference
                 </button>
             </form>
             {% else %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference-3" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference-3" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                  Add a different LOT reference
                 </button>
             </form>
             {% endif %}
@@ -217,9 +217,9 @@
                 </button>
             </form> -->
             {% else %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference-2" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference-2" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                  Add a different LOT reference
                 </button>
             </form>
             {% endif %}
@@ -231,9 +231,9 @@
                 </button>
             </form> -->
             {% else %}
-            <form action="/logresults-web-service/{{version}}/site-operative/lot-reference" method="post" novalidate>
+            <form action="/logresults-web-service/{{version}}/site-operative/enter-lot-reference" method="post" novalidate>
                 <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                Add another test pack
+                Add a different LOT reference
                 </button>
             </form>
             {% endif %}
