--- a/app/views/logresults-web-service/v2/site-operative/request-access.html
+++ b/app/views/logresults-web-service/v2/site-operative/request-access.html
@@ -24,7 +24,7 @@
 
      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Request access to Coventry University: Department of physics</h1>
 
-     <p class="govuk-body govuk-!-margin-bottom-6">Continue to ask the team leader to give you access to this test site.</p>
+     <p class="govuk-body govuk-!-margin-bottom-6">Continue to ask the team leader to give you access to this site.</p>
 
      <a href="/logresults-web-service/{{version}}/site-operative/request-status" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-top-4" data-module="govuk-button">
         Continue
